# exobrain

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-and-publish-pypi.yml
docs/: configuration.md  project-level-storage.md
exobrain/: __init__.py  config.example.yaml  config.py
exobrain/agent/: base.py  core.py  events.py
exobrain/cli/: __init__.py  chat_commands.py  chat_permissions.py  chat_ui.py  config_commands.py  config_wizard.py  constitution_commands.py  init_commands.py  mcp_commands.py  models_commands.py  permissions.py  sessions_commands.py  skills_commands.py  task_commands.py  ui.py  util.py
exobrain/cli/tui/: __init__.py  app.py
exobrain/cli/tui/chat/: __init__.py  app.py
exobrain/cli/tui/chat/widgets/: __init__.py  chat_history.py  status_bar.py
exobrain/cli/tui/skills/: __init__.py  app.py
exobrain/cli/tui/skills/widgets/: __init__.py  skill_detail.py  skills_list.py
exobrain/cli/tui/widgets/: __init__.py  chat_history.py  header.py  input_area.py  message.py  status_bar.py  tool_sidebar.py
exobrain/constitutions/: builtin-coding.md  builtin-default.md
exobrain/mcp/: base.py  context7_client.py
exobrain/memory/: __init__.py  conversations.py  loader.py  storage.py
exobrain/memory/handlers/: __init__.py  base.py  factory.py  truncating.py
exobrain/providers/: __init__.py  base.py  factory.py  gemini_provider.py  local_provider.py  openai_compatible_provider.py  openai_provider.py
exobrain/skills/: README.md  loader.py  manager.py
exobrain/skills/exobrain/task-management/: SKILL.md
exobrain/tasks/: __init__.py  client.py  daemon.py  daemon_runner.py  executor.py  manager.py  models.py  monitor.py  storage.py
exobrain/tasks/transport/: __init__.py  base.py  factory.py  http.py  named_pipe.py  unix_socket.py
exobrain/tools/: README.md  __init__.py  base.py  context7_tools.py  file_tools.py  location_tools.py  math_tools.py  pdf_tools.py  shell_tools.py  skill_tools.py  task_tools.py  time_tools.py  web_tools.py
exobrain/utils/: mvc.py
tests/memory/handlers/: test_factory.py  test_handler_integration.py  test_truncating_handler.py
tests/tasks/: test_client.py  test_daemon.py  test_models.py  test_storage.py  test_task_integration.py  test_task_management.py  test_task_management_statistics.py  test_transport.py
